--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Belkirk College of Engineering
+title: Indicative Data Science
 short_title: Belkirk
 description: Jekyll demo for Forestry CMS
 baseurl:
