--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Indicative Data Science
-short_title: Belkirk
+short_title: Indicative Data Science
 description: Jekyll demo for Forestry CMS
 baseurl:
 permalink: "/:path/"
