--- a/_data/information.yml
+++ b/_data/information.yml
@@ -1,10 +1,10 @@
 ---
 phone: "+1 929 391 0976"
-email: info@belkirkcollege.com
-address_1: 500 University Ave
+email: ana.basiri@glasgow.ac.uk
+address_1: 8NN University Ave
 address_2: ''
-city: New York
-state: NY
-postal_code: 10006
-country: US
-twitter: forestryio
+city: Glasgow
+state: Scotland
+postal_code:
+country: UK
+twitter: indicativedata
